--- a/client/src/components/Result/Result.css
+++ b/client/src/components/Result/Result.css
@@ -1,14 +1,16 @@
-.result{
+.result {
       display: flex;
       align-items: center;
       justify-content: center;
-}
-.result-left{
+      margin-top: 60px;
+    }
+    
+    .result-left {
       display: flex;
       flex-direction: column;
-}
-
-.list-candidate{
+    }
+    
+    .list-candidate {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -19,9 +21,10 @@
       border-radius: 6px;
       background: white;
       background-color: rgba(127, 221, 255, 0.093);
-      box-shadow: rgba(0,0,0,0.4) 0px 2px 4px, rgba(0,0,0,0.3) 0px 7px 13px -3px, rgba(0,0,0,0.2) 0px -3px 0px inset;
-}
-.listcandidate-format-main{
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    }
+    
+    .listcandidate-format-main {
       display: grid;
       grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr;
       gap: 50px;
@@ -31,47 +34,54 @@
       padding: 20px 0;
       color: #454545;
       font-size: 15px;
-      font-weight: 600;
-}
-.listcandidate-format{
+      font-weight: 600; /* Make candidate name, party, and vote number bold */
+    }
+    
+    .listcandidate-format {
       align-items: center;
       font-weight: 500;
-}
-
-.listcandidate-candidates{
+    }
+    
+    .listcandidate-candidates {
       overflow-y: auto;
-}
-
-@media(max-width:800px){
-      .list-candidate{
-            box-sizing: border-box;
-            width: 500px;
-            height: 400px;
-            padding: 10px 30px;
-            margin: 20px auto;
+    }
+    
+    @media (max-width: 800px) {
+      .list-candidate {
+        box-sizing: border-box;
+        width: 500px;
+        height: 400px;
+        padding: 10px 30px;
+        margin: 20px auto;
       }
-      .listcandidate-format-main{
-            padding: 15px 0px;
-            color: #454545;
-            font-size: 12px;
-            width: 400px;
+    
+      .listcandidate-format-main {
+        padding: 15px 0px;
+        color: #454545;
+        font-size: 12px;
+        width: 400px;
       }
-      .listcandidate-product-icon{
-            height: 60px;
+    
+      .listcandidate-product-icon {
+        height: 60px;
       }
-}
-@media(max-width:500px){
-      .list-candidate{
-            width: 600px;
-            margin-left: 60px;
+    }
+    
+    @media (max-width: 500px) {
+      .list-candidate {
+        width: 600px;
+        margin-left: 60px;
       }
-      .listcandidate-format-main{
-            padding: 15px 0px;
-            color: #454545;
-            font-size: 12px;
-            width: 400px;
+    
+      .listcandidate-format-main {
+        padding: 15px 0px;
+        color: #454545;
+        font-size: 12px;
+        width: 400px;
       }
-      .listcandidate-product-icon{
-            height: 60px;
+    
+      .listcandidate-product-icon {
+        height: 60px;
       }
-}
+    }
+    
