--- a/client/src/components/VotingDashboard/VotingDashboard.css
+++ b/client/src/components/VotingDashboard/VotingDashboard.css
@@ -2,7 +2,12 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-top: 100px;
       
+}
+
+.image-section{
+margin-top: 50px;
 }
 
 .candidate-section{
